--- a/Views/Presenca/Index.cshtml
+++ b/Views/Presenca/Index.cshtml
@@ -7,7 +7,7 @@
     int DefaultComum = sessao.UserLogged? sessao.Usuario.Cod_Comum : 0;
 }
 
-<h2>Presencas</h2>
+<h2>Controle de Presença</h2>
 <div class="row">
     @if(sessao.Admin){
         <div class="form-group col-sm-6">
