--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><i class="fa fa-home"></i></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <i class="fa fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav mr-auto">
@@ -60,7 +60,7 @@
                                     Controle
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarControle">
-                                    <a class="dropdown-item" href="/Presenca">Presença de Aluno</a>
+                                    <a class="dropdown-item" href="/Presenca">Presença</a>
                                     @if(sessao.Admin){
                                         <a class="dropdown-item" href="/TipoEstudo">Tipo de Aula</a>
                                     }
