--- a/Views/Usuario/List.cshtml
+++ b/Views/Usuario/List.cshtml
@@ -7,12 +7,17 @@
   UserSession sessao = UserSession.Get(HttpContextAccessor.HttpContext);
 }
 
+<div class="row">
+  <div class="form-group col-sm-12">
     <div class="btn-group" role="group" aria-label="Filtro">
         <button type="button" id="btn_todos" class='btn ' onclick="Filtro('Todos')">Todos</button>
         <button type="button" id="btn_oficializados" class='btn ' onclick="Filtro('Oficializados')">Oficializados</button>
         <button type="button" id="btn_instrutores" class='btn ' onclick="Filtro('Instrutores')">Instrutores</button>
         <button type="button" id="btn_alunos" class='btn ' onclick="Filtro('Alunos')">Alunos</button>
     </div>
+  </div>
+</div>
+    
 
 <div class="table-responsive">
   <table class="table ">
