--- a/Views/Usuario/Edit.cshtml
+++ b/Views/Usuario/Edit.cshtml
@@ -19,7 +19,7 @@
         <input type="text" class="form-control" name="Nome" value="@(Model.Nome)" />
     </div> 
 
-    <div>
+    <div class="form-group col-sm-4">
         <label>&nbsp;</label>
         @if (!string.IsNullOrEmpty(Model.Email)) { 
             <button id="btn_convite" class="btn btn-info btn-block" onclick="EnviarConvite('@(Model.Email)')">Enviar convite de acesso</button>
