--- a/Views/TipoEstudo/Edit.cshtml
+++ b/Views/TipoEstudo/Edit.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="alert alert-danger" role="alert">
-    This is a danger alert—check it out!
+    This is a danger alertï¿½check it out!
 </div>
 
 <div class="row">
@@ -13,5 +13,9 @@
     <div class="form-group col-sm-6">
         <label class="control-label">Nome</label>
         <input type="text" class="form-control" name="Nome" value="@(Model.Nome)" />
+    </div> 
+    <div class="form-group col-sm-6">
+        <label class="control-label">Controle</label>
+        <input type="text" class="form-control" name="Controle" value="@(Model.Controle)" />
     </div> 
 </div> 
