--- a/Views/Presenca/Aula.cshtml
+++ b/Views/Presenca/Aula.cshtml
@@ -7,18 +7,27 @@
     <div class="alert alert-danger" role="alert">
     </div>
 
+    <div class="form-group col-sm-6">
+      <label>Nome</label>
+      <input class="form-control" value="@(ViewBag.Aluno)" disabled>
+    </div>
+    <div class="form-group col-sm-6">
+      <label>Instrumento</label>
+      <input class="form-control" value="@(ViewBag.Instrumento)" disabled>
+    </div>
+
     <div class="form-group col-sm-4">
         <input type="hidden" name="Cod_Presenca" value="@(ViewBag.Cod_Presenca)">
         <label>Tipo</label>
         @await Html.PartialAsync("~/Views/Shared/_Combo.cshtml", new GEM.Models.Combo(){
                 Class="form-control",
                 Name="Cod_Tipo",
-                OnChange="ComumChange(this)",
+                OnChange="TipoChange(this)",
                 Items=GEM.Repository.TipoEstudo.List().Select(e=>new ComboItem(){Text=e.Nome,Value=e.Cod_Tipo.ToString()}).ToList()
             })
     </div>
     <div class="form-group col-sm-2">
-        <label>Numero</label>
+        <label id="Controle">Número</label>
         <input type="number" class="form-control" name="Numero">
     </div>
     <div class="form-group col-sm-5">
@@ -36,7 +45,7 @@
     <thead>
       <tr>
         <th>Tipo</th>
-        <th>Numero</th>
+        <th>Controle</th>
         <th>Observacao</th>
         <th>Instrutor</th>
         <th></th>
@@ -47,7 +56,7 @@
       {
         <tr>
           <td>@item.Tipo</td>
-          <td>@item.Numero</td>
+          <td>@string.Format("{0} {1}", item.Controle, item.Numero)</td>
           <td>@item.Observacao</td>
           <td>@item.Nome_Instrutor</td>
           
@@ -59,3 +68,11 @@
     </tbody>
   </table>
 </div> 
+
+<script>
+  function TipoChange(e){
+    rsp.post({ Cod_Tipo : $(e).val() }, "/Presenca/Controle", (res)=>{
+      $("#Controle").html(res);
+    })
+  }
+</script>
