--- a/Views/Shared/_Combo.cshtml
+++ b/Views/Shared/_Combo.cshtml
@@ -4,7 +4,7 @@
 }
 
 <select id="@(Model.Id)" name="@(Model.Name)" class="@(Model.Class)" onchange="@(Model.OnChange)">
-    <option value=""></option>
+    <option value="@(Model.DefaultValue)">@(Model.DefaultText)</option>
     @foreach (var item in Model.Items)
     {
 
