--- a/Views/Categoria/Index.cshtml
+++ b/Views/Categoria/Index.cshtml
@@ -5,7 +5,7 @@
 <h2>Categorias</h2>
 
 <p>
-    <button type="button" class="btn btn-sm btn-default" onclick="Edita({})">
+    <button type="button" class="btn btn-sm btn-secondary" onclick="Edita({})">
         <i class="fas fa-plus"></i> Novo
     </button>
 </p>
