--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@using GEM.Helpers;
 @using Microsoft.AspNetCore.Http
 @inject IHttpContextAccessor HttpContextAccessor
-
 @{
 
     ViewData["Title"] = "Home Page";
     UserSession sessao = UserSession.Get(HttpContextAccessor.HttpContext);
+    int DefaultComum = sessao.UserLogged? sessao.Usuario.Cod_Comum : 0;
 
     var links = new[] {
         new { Name="Categorias de Instrumentos", Url="/Categoria", Access=""},
@@ -16,6 +16,25 @@
         new { Name="Tipos de Estudos", Url="/TipoEstudo", Access="Admin"}
     };
 }
+
+@if(sessao.Admin){
+    <div class="row">
+        <div class="form-group col-sm-6">
+            <label class="control-label">Comum Congregação</label>
+            @await Html.PartialAsync("~/Views/Shared/_Combo.cshtml", new GEM.Models.Combo(){
+                Class="form-control",
+                Name="Cod_Comum",
+                OnChange="ComumChange(this)",
+                Items=GEM.Repository.Comum.List().Select(e=>new ComboItem(){Text=e.Nome,Value=e.Cod_Comum.ToString()}).ToList(),
+                SelectedItem=(ViewBag.Cod_Comum != null ? ViewBag.Cod_Comum.ToString() : DefaultComum.ToString())
+            })
+        </div>  
+    </div>
+}
+
+<div id="Graficos"></div>
+
+@*<h2>Atalhos</h2>
 
 <div class="row">
     @foreach (var item in links)
@@ -32,4 +51,28 @@
             </div>
         }
     }
-</div>
+</div>*@
+
+
+
+@section Scripts{
+    <!--Load the AJAX API-->
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script>
+        let Cod_Comum = @(DefaultComum);
+
+        $(document).ready(()=>{
+            Graficos()
+        })
+
+        function ComumChange(e){
+            Cod_Comum = $(e).val();
+            Graficos()
+        }
+
+        function Graficos(){
+            rsp.get(null, "/Graficos/Index?Cod_Comum=" + Cod_Comum, "#Graficos");
+        }
+    </script>
+    
+}
