--- a/Views/Instrumento/Index.cshtml
+++ b/Views/Instrumento/Index.cshtml
@@ -5,7 +5,7 @@
 <h2>Instrumentos</h2>
 
 <p>
-    <button type="button" class="btn btn-sm btn-default" onclick="Edita({})">
+    <button type="button" class="btn btn-sm btn-secondary" onclick="Edita({})">
         <i class="fas fa-plus"></i> Novo
     </button>
 </p>
@@ -67,6 +67,7 @@
             rsp.get(null, "/Instrumento/List/", (res) => {
                 $("#ListaInstrumentos").html(res);
                 $("#ListaInstrumentos .table").DataTable({
+                    "bSort" : false,
                     "pageLength": 100,
                     "bPaginate": true,
                     "bLengthChange": false,
