--- a/Views/Presenca/List.cshtml
+++ b/Views/Presenca/List.cshtml
@@ -3,28 +3,24 @@
   Layout = null;
 }
 
-<div class="row">
+<div class="noprint row">
     <div class="form-group col-sm-6">
         <div class="btn-group" role="group" aria-label="Filtro controle de presença">
-            <button id="btn_todos" type="button" class='btn ' onclick="FiltroPresenca('Todos')">Todos</button>
-            <button id="btn_presente" type="button" class='btn ' onclick="FiltroPresenca('Presente')">Presente</button>
-            <button id="btn_ausente" type="button" class='btn ' onclick="FiltroPresenca('Ausente')">Ausente</button>
+            <button id="btn_todos" type="button" class='btn btn-dark' onclick="FiltroPresenca('Todos')">Todos</button>
+            <button id="btn_presente" type="button" class='btn btn-secondary' onclick="FiltroPresenca('Presente')">Presente</button>
+            <button id="btn_ausente" type="button" class='btn btn-secondary' onclick="FiltroPresenca('Ausente')">Ausente</button>
         </div>
     </div>
     <div class="form-group col-sm-6">
         <div class="btn-group float-right" role="group" aria-label="Filtro usuários">
-            <button id="btn_usuarios" type="button" class='btn ' onclick="FiltroUsuario('Todos')">Todos</button>
-            <button id="btn_instrutores" type="button" class='btn ' onclick="FiltroUsuario('Instrutores')">Instrutores</button>
-            <button id="btn_alunos" type="button" class='btn ' onclick="FiltroUsuario('Alunos')">Alunos</button>
+            <button id="btn_usuarios" type="button" class='btn btn-dark' onclick="FiltroUsuario('Todos')">Todos</button>
+            <button id="btn_instrutores" type="button" class='btn btn-secondary' onclick="FiltroUsuario('Instrutores')">Instrutores</button>
+            <button id="btn_alunos" type="button" class='btn btn-secondary' onclick="FiltroUsuario('Alunos')">Alunos</button>
         </div>
     </div>
 </div>
-    
-    
-  
-    
 
-    <div class="table-responsive">
+<div class="table-responsive">
   <table class="table ">
     <thead>
       <tr>
@@ -55,7 +51,7 @@
             }
           </td>
           <td>
-            @if(item.Cod_Presenca != 0 && item.Aluno){
+            @if(item.Aluno){
               <button class="btn btn-info btn-sm" onclick="Historico(@(item.Cod_Usuario), '@(item.Nome)', '@(item.Instrumento)')"> <i class="fa fa-history"></i></button>
             }
               
