--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,8 +13,11 @@
     <!--link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" /-->
     <link rel="stylesheet" href="~/css/style.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" media="print" href="~/css/print.css" />
     <link rel="stylesheet" href="~/css/spinner.css" />
-    <link href="//cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
+    <link href="//cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
+    <!--link href="//cdn.datatables.net/buttons/1.6.1/css/buttons.dataTables.min.css" rel="stylesheet" /-->
+    
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     @RenderSection("Styles", required: false)
 </head>
@@ -22,7 +25,7 @@
     <div id="spinner" class="spinner">
     </div>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="noprint navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><i class="fa fa-home"></i></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -50,7 +53,8 @@
                                 <a class="dropdown-item" href="/Usuario?q=Instrutores">Instrutores</a>
                                 <a class="dropdown-item" href="/Usuario?q=Alunos">Alunos</a>
                                 @if(sessao.Admin){
-                                    <a class="dropdown-item" href="/Comum">Comum</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href="/Comum">Comum Congregação</a>
                                 }
                             </div>
                         </li>
@@ -69,7 +73,7 @@
                         }
                     </ul>
                     <ul class="navbar-nav mr-auto">
-                        <li class="nav-item">@(sessao.UserLogged ? sessao.Usuario.Comum : "")</li>
+                        <li class="nav-item"><span id="Congregacao">@(sessao.UserLogged ? sessao.Usuario.Comum : "")</span></li>
                     </ul>
                     <div>
                         <ul class="navbar-nav">   
@@ -112,7 +116,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="noprint border-top footer text-muted">
         <div class="container">
             &copy; 2020 - GEM - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
@@ -126,9 +130,22 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/rsp.js" asp-append-version="true"></script>
     <script src="~/js/jquery.mask.min.js"></script>
-    <script src="https://kit.fontawesome.com/d60f1e9265.js"></script>
+    <script src="//kit.fontawesome.com/d60f1e9265.js"></script>
     <script src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
     <script src="//cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
+    <script src="//cdn.datatables.net/buttons/1.6.1/js/dataTables.buttons.min.js"></script>
+    <!--
+    <script src="//cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+    -->
+    <script src="//cdn.datatables.net/buttons/1.6.1/js/buttons.print.min.js"></script>
+
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+    <script src="//cdn.datatables.net/buttons/1.6.1/js/buttons.html5.min.js"></script>
+
+    <script src="//cdn.datatables.net/buttons/1.6.1/js/buttons.colVis.min.js"></script>
+    
+    
     <script type="text/javascript">
         
         $(document).ready(function () {
